--- a/m/index.html
+++ b/m/index.html
@@ -3,8 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>保时捷911-50周年</title>
-  <meta content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" name="viewport" />
-  <meta content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)" name="viewport" />
+  <meta content="initial-scale=0.5,user-scalable=no,maximum-scale=0.5,width=device-width" name="viewport" />
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="black" name="apple-mobile-web-app-status-bar-style" />
   <meta content="telephone=no" name="format-detection" />
@@ -16,6 +15,7 @@
     src="../lib/sea/sea-debug.js"
     data-config="../../app/config"
     data-main="../../m/main"></script>
+
  <link href="./css/base.css" rel="stylesheet" type="text/css" />
  <!--
  <link href="./css/animate.css" rel="stylesheet" type="text/css" />
@@ -24,7 +24,7 @@
  <link rel="stylesheet" media="all and (orientation:portrait)" href="./css/portrait.css">
  -->
  </head>
- <body onselectstart="return false">
+ <body onselectstart="return false" style="height:537px;">
     <!---// loading start -->
     <section id="loading-mask" class="lpn-mask">
       <span class="lpn-ghost"></span>
@@ -40,7 +40,7 @@
     </section>
     <!--- \\ loading end -->
     <!---// moving start -->
-    <section class="main">
+    <section class="main" style="position: relative;">
       <div class="main-bg" >
         <div class="bg" id="bg"></div>
         <div class="road" id="road"></div>
@@ -223,13 +223,13 @@
           <!--//gallery1-->
           <div class="photo-gallery" init='true' style="display:none;">
             <div class="photo">
-            <a rel="gallery" href="pic/g1/b2.jpg"><img src="pic/g1/s2.jpg" /><div class="desc">第一代911: 911原型车 － 跑车传奇诞生(1963 - 1973)<br/>作为保时捷 356 的继任车型，911 从诞生伊始就征服了全世界跑车爱好者。1963 年，911 原型车以“901”之名在德国法兰克福车展上面世。1964 年，它被重新命名为“911”推向市场。</div></a>
+            <a rel="gallery" href="../pic/g1/b2.jpg"><img src="../pic/g1/s2.jpg" /><div class="desc">第一代911: 911原型车 － 跑车传奇诞生(1963 - 1973)<br/>作为保时捷 356 的继任车型，911 从诞生伊始就征服了全世界跑车爱好者。1963 年，911 原型车以“901”之名在德国法兰克福车展上面世。1964 年，它被重新命名为“911”推向市场。</div></a>
             </div>
             <div class="photo">
-            <a rel="gallery" href="pic/g1/b3.jpg"><img src="pic/g1/s3.jpg" /></a>
+            <a rel="gallery" href="../pic/g1/b3.jpg"><img src="../pic/g1/s3.jpg" /></a>
             </div>
             <div class="photo">
-              <a rel="gallery" href="pic/g1/b4.jpg"><img src="pic/g1/s4.jpg" /></a>
+              <a rel="gallery" href="../pic/g1/b4.jpg"><img src="../pic/g1/s4.jpg" /></a>
             </div>
           </div>
           <!--\\gallery1-->
@@ -239,13 +239,13 @@
 
                 <div class="photo">
 
-                    <a rel="gallery" href="pic/g2/b1.jpg"><img src="pic/g2/s1.jpg" /><div class="desc">第二代911: G 系列 － 首次全面改进 (1973 – 1988)<br/>在 911 面世十年后，保时捷工程师们对 911 进行了更加全面的升级改造。新一代 911 被荣耀地称为“G 车型”，从 1973 年一直生产到 1989 年，市场周期超过以往任何一款前代车型。</div></a>
+                    <a rel="gallery" href="../pic/g2/b1.jpg"><img src="../pic/g2/s1.jpg" /><div class="desc">第二代911: G 系列 － 首次全面改进 (1973 – 1988)<br/>在 911 面世十年后，保时捷工程师们对 911 进行了更加全面的升级改造。新一代 911 被荣耀地称为“G 车型”，从 1973 年一直生产到 1989 年，市场周期超过以往任何一款前代车型。</div></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g2/b2.jpg"><img src="pic/g2/s2.jpg" /></a>
+                    <a rel="gallery" href="../pic/g2/b2.jpg"><img src="../pic/g2/s2.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g2/b4.jpg"><img src="pic/g2/s4.jpg" /></a>
+                    <a rel="gallery" href="../pic/g2/b4.jpg"><img src="../pic/g2/s4.jpg" /></a>
                 </div>
             </div>
             <!--\\gallery2-->
@@ -254,16 +254,16 @@
           <div class="photo-gallery" init='true' style="display:none;">
               <div class="photo">
 
-                  <a rel="gallery" href="pic/g3/b1.jpg"><img src="pic/g3/s1.jpg" /><div class="desc">第三代911: 964 型 － 现代经典问世 (1988 – 1993) <br/>当许多人担忧一个时代或许即将结束时，保时捷于 1988 年适时推出了 911 Carrera 4 (964)。经过 15 年的发展，911 中 85% 的部件都已更新，成为了一款兼备时尚触觉与可持续性效能的保时捷旗舰车型。</div></a>
+                  <a rel="gallery" href="../pic/g3/b1.jpg"><img src="../pic/g3/s1.jpg" /><div class="desc">第三代911: 964 型 － 现代经典问世 (1988 – 1993) <br/>当许多人担忧一个时代或许即将结束时，保时捷于 1988 年适时推出了 911 Carrera 4 (964)。经过 15 年的发展，911 中 85% 的部件都已更新，成为了一款兼备时尚触觉与可持续性效能的保时捷旗舰车型。</div></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g3/b2.jpg"><img src="pic/g3/s2.jpg" /></a>
+                  <a rel="gallery" href="../pic/g3/b2.jpg"><img src="../pic/g3/s2.jpg" /></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g3/b3.jpg"><img src="pic/g3/s3.jpg" /></a>
+                  <a rel="gallery" href="../pic/g3/b3.jpg"><img src="../pic/g3/s3.jpg" /></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g3/b4.jpg"><img src="pic/g3/s4.jpg" /></a>
+                  <a rel="gallery" href="../pic/g3/b4.jpg"><img src="../pic/g3/s4.jpg" /></a>
               </div>
           </div>
           <!--\\gallery3-->
@@ -273,16 +273,16 @@
 
               <div class="photo">
 
-                  <a rel="gallery" href="pic/g4/b1.jpg"><img src="pic/g4/s1.jpg" /><div class="desc">第四代911: 993 型 － 风冷式 911 的谢幕 (1993 – 1997) <br/>内部编号为 993 的 911 车型，至今依然是众多保时捷车主的最爱。其出类拔萃的设计使得它堪称一代经典。一体式保险杠突出了平稳、优雅的风格；将圆形大灯改成椭圆形大灯，使其前部线条较前代车型更为平滑。</div></a>
+                  <a rel="gallery" href="../pic/g4/b1.jpg"><img src="../pic/g4/s1.jpg" /><div class="desc">第四代911: 993 型 － 风冷式 911 的谢幕 (1993 – 1997) <br/>内部编号为 993 的 911 车型，至今依然是众多保时捷车主的最爱。其出类拔萃的设计使得它堪称一代经典。一体式保险杠突出了平稳、优雅的风格；将圆形大灯改成椭圆形大灯，使其前部线条较前代车型更为平滑。</div></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g4/b2.jpg"><img src="pic/g4/s2.jpg" /></a>
+                  <a rel="gallery" href="../pic/g4/b2.jpg"><img src="../pic/g4/s2.jpg" /></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g4/b3.jpg"><img src="pic/g4/s3.jpg" /></a>
+                  <a rel="gallery" href="../pic/g4/b3.jpg"><img src="../pic/g4/s3.jpg" /></a>
               </div>
               <div class="photo">
-                  <a rel="gallery" href="pic/g4/b4.jpg"><img src="pic/g4/s4.jpg" /></a>
+                  <a rel="gallery" href="../pic/g4/b4.jpg"><img src="../pic/g4/s4.jpg" /></a>
               </div>
           </div>
           <!--\\gallery4-->
@@ -291,16 +291,16 @@
             <div class="photo-gallery" init='true' style="display:none;">
                 <div class="photo">
 
-                    <a rel="gallery" href="pic/g5/b1.jpg"><img src="pic/g5/s1.jpg" /><div class="desc">第五代911: 996 型 －水冷式车型登场 (1997 – 2004)<br/>于 1997 至 2005 年间投入生产的 996 型，堪称 911 发展史中的一大转折点。这一代保时捷 911 首次采用水冷式水平对置发动机，是全面技术改良的一大成果。其输出功率能够达到 300 hp，并在降低排放、噪音和耗油量方面均有所突破。</div></a>
+                    <a rel="gallery" href="../pic/g5/b1.jpg"><img src="../pic/g5/s1.jpg" /><div class="desc">第五代911: 996 型 －水冷式车型登场 (1997 – 2004)<br/>于 1997 至 2005 年间投入生产的 996 型，堪称 911 发展史中的一大转折点。这一代保时捷 911 首次采用水冷式水平对置发动机，是全面技术改良的一大成果。其输出功率能够达到 300 hp，并在降低排放、噪音和耗油量方面均有所突破。</div></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g5/b2.jpg"><img src="pic/g5/s2.jpg" /></a>
+                    <a rel="gallery" href="../pic/g5/b2.jpg"><img src="../pic/g5/s2.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g5/b3.jpg"><img src="pic/g5/s3.jpg" /></a>
+                    <a rel="gallery" href="../pic/g5/b3.jpg"><img src="../pic/g5/s3.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g5/b4.jpg"><img src="pic/g5/s4.jpg" /></a>
+                    <a rel="gallery" href="../pic/g5/b4.jpg"><img src="../pic/g5/s4.jpg" /></a>
                 </div>
             </div>
             <!--\\gallery5-->
@@ -309,16 +309,16 @@
             <div class="photo-gallery" init='true' style="display:none;">
                 <div class="photo">
 
-                    <a rel="gallery" href="pic/g6/b1.jpg"><img src="pic/g6/s1.jpg" /><div class="desc">第六代911: 997 型 － 经典与时尚的完美融合 (2004 – 2011)<br/>2004 年 7 月，保时捷发布了新一代 911 Carrera 和 911 Carrera S，内部编号为 997。前裙板配备了带有独立辅助车灯模组的透明玻璃大灯，彰显了传统 911 的蛙眼设计风格。997 型拥有醒目的造型和出色的行驶性能，令人折服。</div></a>
+                    <a rel="gallery" href="../pic/g6/b1.jpg"><img src="../pic/g6/s1.jpg" /><div class="desc">第六代911: 997 型 － 经典与时尚的完美融合 (2004 – 2011)<br/>2004 年 7 月，保时捷发布了新一代 911 Carrera 和 911 Carrera S，内部编号为 997。前裙板配备了带有独立辅助车灯模组的透明玻璃大灯，彰显了传统 911 的蛙眼设计风格。997 型拥有醒目的造型和出色的行驶性能，令人折服。</div></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g6/b2.jpg"><img src="pic/g6/s2.jpg" /></a>
+                    <a rel="gallery" href="../pic/g6/b2.jpg"><img src="../pic/g6/s2.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g6/b3.jpg"><img src="pic/g6/s3.jpg" /></a>
+                    <a rel="gallery" href="../pic/g6/b3.jpg"><img src="../pic/g6/s3.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g6/b4.jpg"><img src="pic/g6/s4.jpg" /></a>
+                    <a rel="gallery" href="../pic/g6/b4.jpg"><img src="../pic/g6/s4.jpg" /></a>
                 </div>
             </div>
             <!--\\gallery6-->
@@ -326,16 +326,16 @@
             <!--//gallery7-->
             <div class="photo-gallery" init='true' style="display:none;">
                 <div class="photo">
-                    <a rel="gallery" href="pic/g7/b1.jpg"><img src="pic/g7/s1.jpg" /> <div class="desc">第七代911: 991 型 － 散发成熟魅力的梦想跑车 (2011 至今)<br/>这款跑车在保时捷内部被称为 991 型，反映了 911 发展中重大的技术飞跃。全新的悬挂结合加长轴距、加宽轮距、加大轮胎以及经过人体工程学优化的内饰，共同缔造了更具运动感及舒适性的驾驶体验。</div></a>
+                    <a rel="gallery" href="../pic/g7/b1.jpg"><img src="../pic/g7/s1.jpg" /> <div class="desc">第七代911: 991 型 － 散发成熟魅力的梦想跑车 (2011 至今)<br/>这款跑车在保时捷内部被称为 991 型，反映了 911 发展中重大的技术飞跃。全新的悬挂结合加长轴距、加宽轮距、加大轮胎以及经过人体工程学优化的内饰，共同缔造了更具运动感及舒适性的驾驶体验。</div></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g7/b2.jpg"><img src="pic/g7/s2.jpg" /></a>
+                    <a rel="gallery" href="../pic/g7/b2.jpg"><img src="../pic/g7/s2.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g7/b3.jpg"><img src="pic/g7/s3.jpg" /></a>
+                    <a rel="gallery" href="../pic/g7/b3.jpg"><img src="../pic/g7/s3.jpg" /></a>
                 </div>
                 <div class="photo">
-                    <a rel="gallery" href="pic/g7/b4.jpg"><img src="pic/g7/s4.jpg" /></a>
+                    <a rel="gallery" href="../pic/g7/b4.jpg"><img src="../pic/g7/s4.jpg" /></a>
                 </div>
             </div>
             <!--\\gallery7-->
@@ -343,25 +343,25 @@
           <!--//video-->
           <div class="video-gallery" init='false'>
                 <div class="photo">
-                  <a href="video.php?id=1"><img src="pic/v1.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=1"><img src="../pic/v1.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=2"><img src="pic/v2.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=2"><img src="../pic/v2.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=3"><img src="pic/v3.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=3"><img src="../pic/v3.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=4"><img src="pic/v4.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=4"><img src="../pic/v4.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=5"><img src="pic/v5.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=5"><img src="../pic/v5.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=6"><img src="pic/v6.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=6"><img src="../pic/v6.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="video.php?id=7"><img src="pic/v7.jpg" /><span>播放</span></a>
+                  <a href="../video.php?id=7"><img src="../pic/v7.jpg" /><span>播放</span></a>
                 </div>
             </div>
           <!--//video-->
