--- a/m/index.html
+++ b/m/index.html
@@ -390,13 +390,14 @@
             <label for="email"><input name="email" type="text"></label>
             <label for="code"><input name="code" type="text"></label>
             <label for="address"><input name="address" type="text"></label>
+            <div class="btn1" style="position: absolute;top: 162px;left: 530px;">提交</div>
         </form>
         <div class="result-form-suc" style="display:none;" >
             <br/>
-            <div class="btn1 btn-again" style="margin-top: 196px;margin-left:0px;">再玩一次</div><div class="btn1 btn-gallery" style="margin-top: 196px;margin-left:15px;">探索<span class="stren">911</span></div>
+            <div class="btn1 btn-again" style="margin-top: 190px;margin-left:0px;">再玩一次</div><div class="btn1 btn-gallery" id="G_fill-form" style="margin-top: 190px;margin-left:110px;">填写个人资料</div>
         </div>
         <div class="result-failure" style="display:none;">
-            <div class="btn1 btn-again" style="margin-top: 244px;margin-left: 161px;">再玩一次</div><div class="btn1 btn-gallery" style="margin-top: 244px;margin-left:15px;">探索<span class="stren">911</span></div>
+            <div class="btn1 btn-again" style="margin-top: 230px;margin-left: 85px;">再玩一次</div><div class="btn1 btn-gallery" style="margin-top: 230px;margin-left: 105px;">探索<span class="stren">911</span></div>
         </div>
       </div>
     </div>
