--- a/m/index.html
+++ b/m/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>保时捷911-50周年</title>
-  <meta content="initial-scale=0.5,user-scalable=no,maximum-scale=0.5,width=device-width" name="viewport" />
+  <meta content="initial-scale=0.5,user-scalable=yes,maximum-scale=0.5,width=960" name="viewport" />
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="black" name="apple-mobile-web-app-status-bar-style" />
   <meta content="telephone=no" name="format-detection" />
@@ -17,6 +17,7 @@
     data-main="../../m/main"></script>
 
  <link href="./css/base.css" rel="stylesheet" type="text/css" />
+ <link rel="stylesheet" media="all and (orientation:portrait)" href="../css/portrait_m.css">
  <!--
  <link href="./css/animate.css" rel="stylesheet" type="text/css" />
  <link href="./css/jquery.fancybox.css" rel="stylesheet" type="text/css" />
@@ -24,7 +25,7 @@
  <link rel="stylesheet" media="all and (orientation:portrait)" href="./css/portrait.css">
  -->
  </head>
- <body onselectstart="return false" style="height:537px;">
+ <body onselectstart="return false">
     <!---// loading start -->
     <section id="loading-mask" class="lpn-mask">
       <span class="lpn-ghost"></span>
@@ -118,7 +119,7 @@
     <!--load jquery and plugin-->
     <script type="text/javascript" src="../lib/jquery/jquery-1.10.js"></script>
     <script type="text/javascript" src="../src/jquery-plugin/easing/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="../src/jquery-plugin/jquery.queryloader2.js"></script>
+    <script type="text/javascript" src="../src/jquery-plugin/jquery.queryloader22.js"></script>
     <script type="text/javascript">
     // query loading
     var $probar = $('#process-bar');
