--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             </div>
             <div class="r-list">
             </div>
+            <div class="validation">为了保证用户参与成绩真实有效，对于成绩异常成绩，保时捷（中国）汽车销售有限公司保留获奖规则解释权</div>
         </div>
     </div>
 </section>
@@ -469,7 +470,7 @@
     <!--load jquery and plugin-->
     <script type="text/javascript" src="./lib/jquery/jquery-1.10.js"></script>
     <script type="text/javascript" src="./src/jquery-plugin/easing/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="./src/jquery-plugin/jquery.queryloader2.js"></script>
+    <script type="text/javascript" src="./src/jquery-plugin/jquery.queryloader22.js"></script>
     <script type="text/javascript">
     // query loading
     var $probar = $('#process-bar');
