--- a/m/index.html
+++ b/m/index.html
@@ -3,7 +3,8 @@
  <head>
   <meta charset="utf-8"/>
   <title>保时捷911-50周年</title>
-  <meta content="initial-scale=0.5,user-scalable=yes,maximum-scale=0.5,width=960" name="viewport" />
+     <meta name="HandheldFriendly" content="true" />
+  <meta content="initial-scale=0.5,user-scalable=yes,maximum-scale=0.5,minimum-scale=0,width=960" name="viewport" />
   <meta content="yes" name="apple-mobile-web-app-capable" />
   <meta content="black" name="apple-mobile-web-app-status-bar-style" />
   <meta content="telephone=no" name="format-detection" />
@@ -391,12 +392,16 @@
             <label for="email"><input name="email" type="text"></label>
             <label for="code"><input name="code" type="text"></label>
             <label for="address"><input name="address" type="text"></label>
-            <div class="btn1" style="position: absolute;top: 162px;left: 530px;">提交</div>
+            <div class="btn1 btn-submit" style="position: absolute;top: 162px;left: 503px;">提交</div>
         </form>
-        <div class="result-form-suc" style="display:none;" >
+        <div class="result-form-suc">
             <br/>
-            <div class="btn1 btn-again" style="margin-top: 190px;margin-left:0px;">再玩一次</div><div class="btn1 btn-gallery" id="G_fill-form" style="margin-top: 190px;margin-left:110px;">填写个人资料</div>
+            <div class="btn1 btn-again" style="margin-top: 190px;margin-left:0px;">再玩一次</div><div class="btn1" id="G_fill-form" style="margin-top: 190px;margin-left:110px;">填写个人资料</div>
         </div>
+          <div class="result-form-suc2">
+              <div class="result-form-submited">提交成功</div>
+              <div class="btn1 btn-again" style="margin-top: 230px;margin-left: 130px;">再玩一次</div><div class="btn1 btn-gallery" style="margin-top: 230px;margin-left: 105px;">探索<span class="stren">911</span></div>
+          </div>
         <div class="result-failure" style="display:none;">
             <div class="btn1 btn-again" style="margin-top: 230px;margin-left: 85px;">再玩一次</div><div class="btn1 btn-gallery" style="margin-top: 230px;margin-left: 105px;">探索<span class="stren">911</span></div>
         </div>
