--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
       <div class="result-con">
         <div class="result-tit" style="display:none;">
             <div class="result-con-title"></div>
-            <div class="btn1 btn-again" style="margin-top: 21px;margin-left: 12px;margin-right: 30px;">再玩一次</div>
-            <div class="btn1 btn-submit" style="margin-top: 21px;">提交信息</div>
+            <div class="btn1 btn-again" style="margin-top: 44px;margin-left: 12px;margin-right: 30px;">再玩一次</div>
+            <div class="btn1 btn-submit" style="margin-top: 44px;">提交信息</div>
         </div>
         <form class="result-form" style="display:none;">
             <label>姓名<input name="name" type="text"></label>
@@ -353,6 +353,7 @@
             <label>邮箱<input name="email" type="text"></label>
             <label>邮编<input name="code" type="text"></label>
             <label>地址<input name="address" type="text"></label>
+            <label class="authcode"><input name="authcode" type="text"><img src="data/public/index.php/home/authcode" /><a class="refresh_authcode" href="javascript:;">看不清</a><span class="autherror">验证码错误</span></label>
         </form>
         <div class="result-form-suc" style="display:none;">
             <br/>
