--- a/m/index.html
+++ b/m/index.html
@@ -59,7 +59,7 @@
                       <a href="javascript:;" id="rule">活动规则<span></span></a>
                       <a href="javascript:;" id="ranking">排行榜<span></span></a>
                       <a target="_blank" href="http://e.weibo.com/porschechina">关注微博<span></span></a>
-                      <a href="javascript:;" id="J_share">分享微博<span></span></a>
+                        <a target="_blank" href="http://v.t.sina.com.cn/share/share.php?title=%23911%e4%ba%94%e5%8d%81%e5%91%a8%e5%b9%b4%23+%e6%88%91%e5%88%9a%e5%8f%82%e5%8a%a0%e4%ba%86%e4%bf%9d%e6%97%b6%e6%8d%b7911%e4%ba%94%e5%8d%81%e5%91%a8%e5%b9%b4%e7%9a%84%e7%89%b9%e5%88%ab%e6%b4%bb%e5%8a%a8%ef%bc%8c%e4%bd%a0%e4%b9%9f%e6%9d%a5%e8%af%95%e8%af%95%e5%90%a7%e3%80%82&amp;url=http://50years911.porsche-events.cn%2f&amp;pic=http://50years911.porsche-events.cn/91150th.jpg" title="分享到新浪微博" class="sina">分享微博<span></span></a>
                       <a target="_blank" href="http://www.porsche.com/china/">保时捷官网<span></span></a>
                     </div>
                     <em class="nav-up" id="J_nav-up"></em>
@@ -186,6 +186,8 @@
         <div class="r-list">
         </div>
         <div class="r-sep"></div>
+
+          <div class="validation">为了保证用户参与成绩真实有效，对于成绩异常成绩，保时捷（中国）汽车销售有限公司保留获奖规则解释权</div>
       </div>
     </div>
 </section>
@@ -249,6 +251,15 @@
                 <div class="photo">
                     <a rel="gallery" href="./pic/g2/b4.jpg"><img src="./pic/g2/s4.jpg" /></a>
                 </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g2/b5.jpg"><img src="./pic/g2/s5.jpg" /></a>
+                </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g2/b6.jpg"><img src="./pic/g2/s6.jpg" /></a>
+                </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g2/b7.jpg"><img src="./pic/g2/s7.jpg" /></a>
+                </div>
             </div>
             <!--\\gallery2-->
 
@@ -266,6 +277,12 @@
               </div>
               <div class="photo">
                   <a rel="gallery" href="./pic/g3/b4.jpg"><img src="./pic/g3/s4.jpg" /></a>
+              </div>
+              <div class="photo">
+                  <a rel="gallery" href="./pic/g3/b5.jpg"><img src="./pic/g3/s5.jpg" /></a>
+              </div>
+              <div class="photo">
+                  <a rel="gallery" href="./pic/g3/b6.jpg"><img src="./pic/g3/s6.jpg" /></a>
               </div>
           </div>
           <!--\\gallery3-->
@@ -286,6 +303,15 @@
               <div class="photo">
                   <a rel="gallery" href="./pic/g4/b4.jpg"><img src="./pic/g4/s4.jpg" /></a>
               </div>
+              <div class="photo">
+                  <a rel="gallery" href="./pic/g4/b5.jpg"><img src="./pic/g4/s5.jpg" /></a>
+              </div>
+              <div class="photo">
+                  <a rel="gallery" href="./pic/g4/b6.jpg"><img src="./pic/g4/s6.jpg" /></a>
+              </div>
+              <div class="photo">
+                  <a rel="gallery" href="./pic/g4/b7.jpg"><img src="./pic/g4/s7.jpg" /></a>
+              </div>
           </div>
           <!--\\gallery4-->
 
@@ -303,6 +329,15 @@
                 </div>
                 <div class="photo">
                     <a rel="gallery" href="./pic/g5/b4.jpg"><img src="./pic/g5/s4.jpg" /></a>
+                </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g5/b5.jpg"><img src="./pic/g5/s5.jpg" /></a>
+                </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g5/b6.jpg"><img src="./pic/g5/s6.jpg" /></a>
+                </div>
+                <div class="photo">
+                    <a rel="gallery" href="./pic/g5/b7.jpg"><img src="./pic/g5/s7.jpg" /></a>
                 </div>
             </div>
             <!--\\gallery5-->
@@ -345,25 +380,25 @@
           <!--//video-->
           <div class="video-gallery" init='false'>
                 <div class="photo">
-                  <a href="../video.php?id=1"><img src="./pic/v1.jpg" /><span>播放</span></a>
+                  <a href="../videos/video1.mp4"><img src="./pic/v1.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=2"><img src="./pic/v2.jpg" /><span>播放</span></a>
+                  <a href="../videos/video2.mp4"><img src="./pic/v2.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=3"><img src="./pic/v3.jpg" /><span>播放</span></a>
+                  <a href="../videos/video3.mp4"><img src="./pic/v3.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=4"><img src="./pic/v4.jpg" /><span>播放</span></a>
+                  <a href="../videos/video4.mp4"><img src="./pic/v4.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=5"><img src="./pic/v5.jpg" /><span>播放</span></a>
+                  <a href="../videos/video5.mp4"><img src="./pic/v5.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=6"><img src="./pic/v6.jpg" /><span>播放</span></a>
+                  <a href="../videos/video6.mp4"><img src="./pic/v6.jpg" /><span>播放</span></a>
                 </div>
                 <div class="photo">
-                  <a href="../video.php?id=7"><img src="./pic/v7.jpg" /><span>播放</span></a>
+                  <a href="../videos/video7.mp4"><img src="./pic/v7.jpg" /><span>播放</span></a>
                 </div>
             </div>
           <!--//video-->
@@ -392,7 +427,8 @@
             <label for="email"><input name="email" type="text"></label>
             <label for="code"><input name="code" type="text"></label>
             <label for="address"><input name="address" type="text"></label>
-            <div class="btn1 btn-submit" style="position: absolute;top: 162px;left: 503px;">提交</div>
+            <label for="authcode" class="authcode"><input name="authcode" type="text"><img width="120" height="40" src="../data/public/index.php/home/authcode" /><a class="refresh_authcode" href="javascript:;">看不清</a><div class="autherror">验证码错误</div></label>
+            <div class="btn1 btn-submit" style="position: absolute;top: 169px;left: 269px;">提交</div>
         </form>
         <div class="result-form-suc">
             <br/>
